--- a/awards/templates/awards/issuer_list.html
+++ b/awards/templates/awards/issuer_list.html
@@ -2,8 +2,8 @@
 {% block title %}Список организаций{% endblock %}
 {% block content %}
     <h1>Список организаций</h1>
-    <table name="issuer"  id="issuers_list" class="table table-bordered">
-        <thead>
+    <table id="issuers_list" class="table table-bordered">
+        <thead class="thead-light">
             <tr>
                 <th>№</th>
                 <th>наименование организации</th>
