--- a/awards/templates/awards/awards_list.html
+++ b/awards/templates/awards/awards_list.html
@@ -6,10 +6,10 @@
         <thead class="thead-light">
             <tr>
                 <th>№</th>
-                <th>наименование награды</th>
-                <th>тип награды</th>
+                <th>Наименование награды</th>
+                <th>Тип награды</th>
                 <th>Уровень награды</th>
-                <th>организация</th>
+                <th>Организация</th>
                 <th></th>
             </tr>
         </thead>
