--- a/awards/templates/awards/employee_awards.html
+++ b/awards/templates/awards/employee_awards.html
@@ -48,5 +48,5 @@
         </tbody>
     </table>
     <br>
-    <a href="{% url 'awards:create_employee_award' %}" class="btn btn-success">Добавить награду сотрудника</a>
+    <a href="{% url 'awards:create_employee_award' %}" class="btn btn-success">Добавить награду преподавателя</a>
 {% endblock %}
