--- a/awards/templates/awards/issuer_list.html
+++ b/awards/templates/awards/issuer_list.html
@@ -6,7 +6,7 @@
         <thead class="thead-light">
             <tr>
                 <th>№</th>
-                <th>наименование организации</th>
+                <th>Наименование организации</th>
                 <th></th>
             </tr>
         </thead>
