--- a/awards/templates/awards/employee_award_delete.html
+++ b/awards/templates/awards/employee_award_delete.html
@@ -3,8 +3,8 @@
     <div class="container">
         <form action="" method="post">
             {% csrf_token %}
-            <h1>{% block title %}Удаление награды сотрудника{% endblock %}</h1>
-            <p>Вы действительно хотите удалить награду сотрудника?</p>
+            <h1>{% block title %}Удаление награды преподавателя{% endblock %}</h1>
+            <p>Вы действительно хотите удалить награду преподавателя?</p>
             <p>{{ employee_awards }}</p>
             <button type="submit" class="btn btn-danger">Удалить</button>
             <a href="{% url 'awards:list_employee_awards' %}" class="btn btn-primary" role="button">Отмена</a>
