--- a/awards/templates/awards/employee_award_update.html
+++ b/awards/templates/awards/employee_award_update.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
-{% block title %}Редактирование награды сотрудника{% endblock %}
+{% block title %}Редактирование награды преподавателя{% endblock %}
 
 {% block additional_css %}
 {{ form.media.css }}
@@ -10,7 +10,7 @@
     <div class="container">
         <form action="" method="post">
             {% csrf_token %}
-            <h1>Редактирование награды сотрудника</h1>
+            <h1>Редактирование награды преподавателя</h1>
             <br>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
