--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -44,7 +44,9 @@
                             <a class="dropdown-item" href="{% url 'disciplines:brs_scores' discipline.id %}">Баллы БРС</a>
                             {% if teacher %}
                             <a class="dropdown-item" href="#" name="delete_course" id="{{ discipline.id }}">Снять привязку</a>
-                            <a class="dropdown-item" href="{% url 'disciplines:brs_student_list' discipline.id %}"> Открыть ведомость</a>
+                            {% if 'экзамен' in discipline.discipline_detail.controls %}
+                            <a class="dropdown-item" href="{% url 'disciplines:brs_student_list' discipline.id %}"> Экзамен/Зачет</a>
+                            {% endif %}
                             {% endif %}
                         </div>
                     </div>
