--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
             </div>
                 </div>
         </nav>
-        <div class="container">
+        <div class="container-fluid">
             <br>
             {% block content %}
             {% endblock %}
