User can change max checkpoint points

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
                         <div class="dropdown-menu" aria-labelledby="admin">
                           {% if user|has_group:"teacher" %}
                           <a class="dropdown-item" href="{% url 'disciplines:mysubjects' %}">Мои дисциплины</a>
+                          <a class="dropdown-item" href="{% url 'students:group_points' %}">Экран успеваемости</a>
                           {% endif %}
                           {% if user|has_group:"office" or user|has_group:"zavkaf" %}
                           <a class="dropdown-item" href="{% url 'teachers:list_teachers' %}">Список преподавателей</a>
