--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -41,7 +41,7 @@
         {% if not maxpoints %}
         <div class="row">
             <div class="col">
-                <div class="alert alert-warning" role="alert">Вы не установили максимальные допустимые баллы по контрольные срезам!! <a href="#" class="alert-link" id="SetMaxPointsLink">Установите!!</a></div>
+                <div class="alert alert-warning" role="alert" id="SetMaxPointsAlert">Вы не установили максимальные допустимые баллы по контрольные срезам!! <a href="#" class="alert-link" id="SetMaxPointsLink">Установите!!</a></div>
             </div>
         </div>
         {% endif %}
@@ -60,7 +60,8 @@
             <div class="col"><h2>Семестр: {{ discipline.discipline_detail.semester }}</h2></div>
         </div>
         <div class="row">
-            <div class="col"><h2>Преподаватель: {{ discipline.lecturer.FIO }} </h2></div>
+            <div class="col-9"><h2>Преподаватель: {{ discipline.lecturer.FIO }} </h2></div>
+            <div class="col-3"><button class="btn btn-primary {% if not maxpoints %}initial{% else %}maxpointsset{% endif %}" id="SetMaxPointsButton">Установить макс. баллы</button></div>
         </div>
         <div class="row">
             <div class="col">
@@ -106,6 +107,12 @@ $(document).ready(function(){
         }
         return msg;
     }
+    function ShowMaxPointsForm(data={ {% for checkpoint in checkpoints %}'{{ checkpoint.id }}':'',{% endfor %} }){
+        $.each(data, function(key, value){
+            $('input[id="checkpointinput_' + key + '"').val(value);
+        });
+        $('#SetMaxPointsModal').modal('show');
+    }
 
     $('input[id*="checkpointinput_"]').on('keyup', function(e){
         var s = 0;
@@ -117,8 +124,7 @@ $(document).ready(function(){
 
     $('#SetMaxPointsLink').on('click',function(e){
         e.preventDefault();
-        $('input[id*="checkpointinput_"]').val('');
-        $('#SetMaxPointsModal').modal('show');
+        ShowMaxPointsForm();
     });
 
     $('#SetMaxPoints').on('click', function(){
@@ -140,20 +146,50 @@ $(document).ready(function(){
             $.each(data['data'], function(key, value){
                 $(columns).each(function(index){
                     if($(this)[0].name === "checkpoint_" + key){
-                        $(this)[0].label = $(this)[0].label + " " + value;
+                        $(this)[0].label = $(this)[0].label.split('=')[0] + "=" + value;
                     }
                 });
             });
             InitTable(columns, apps);
+            $('#SetMaxPointsButton').removeClass('initial').addClass('maxpointsset')
             $('#SetMaxPointsModal').modal('hide');
-            $('div.alert').hide();
+            $('#SetMaxPointsAlert').hide();
         }).fail(function(jqXHR, textStatus, errorThrown){
-            var msg = get_error_msg(jqXHR.statusCode().status, 1);
+            var msg = get_error_msg(jqXHR.status, 1);
             $('#modal_error').html(msg);
 			$('#modal_error').show();
 			$('#modal_error').delay(3000).slideUp(500, function() {$(this).hide();});
         });
     });
+
+    $(document).on('click','button.maxpointsset',function(){
+        $.ajax({
+            url:"{% url 'disciplines:api:get_max_points' %}",
+            method:"GET",
+            data:{
+                "course":{{ discipline.id }}
+            },
+            dataType:"json"
+        }).done(function(data, textStatus, jqXHR){
+            if(data['result']){
+                ShowMaxPointsForm(data['data']);
+            }else{
+                $('#modal_error').html('Ошибка при получении максимальных баллов');
+                $('#modal_error').show();
+                $('#modal_error').delay(3000).slideUp(500, function() {$(this).hide();});
+            }
+        }).fail(function(jqXHR, textStatus, errorThrown){
+            var msg = get_error_msg(jqXHR.status, 1);
+            $('#modal_error').html(msg);
+			$('#modal_error').show();
+			$('#modal_error').delay(3000).slideUp(500, function() {$(this).hide();});
+        });
+    });
+
+    $(document).on('click','button.initial',function(){
+        ShowMaxPointsForm();
+    });
+
 
     function InitTable(table_columns, table_app){
         $('#scores_list').empty();
