--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -20,7 +20,7 @@
                         {% for checkpoint in checkpoints %}
                         <div class="row">
                             <label for="checkpointinput_{{ checkpoint.id }}">{{ checkpoint.name }} Максимальные баллы</label>
-                            <input type="number" id="checkpointinput_{{ checkpoint.id }}" class="form-control" min="1" max="100" required/>
+                            <input type="number" id="checkpointinput_{{ checkpoint.id }}" class="form-control" min="1" max="100" step="0.1" required/>
                         </div>
                         {% endfor %}
                     </div>
