--- a/templates/teacher_edit.html
+++ b/templates/teacher_edit.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
-{% block title %}Редактирование сотрудника{% endblock %}
+{% block title %}{% if profile %}Профиль{% else %}Редактирование{% endif %} сотрудника{% endblock %}
 {% block content %}
     <div class="container">
         <form action="" method="post">
             {% csrf_token %}
-            <h1>Редактирование сотрудника</h1>
+            <h1>{% if profile %}Профиль{% else %}Редактирование{% endif %} сотрудника</h1>
             <br>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
