--- a/templates/password_reset_confirm.html
+++ b/templates/password_reset_confirm.html
@@ -11,6 +11,8 @@
               {% csrf_token %}
               {{ form.as_p }}
             </div>
+        </div>
+        <div class="row justify-content-md-center">
             <div class="col-md-4">
                 <input type="submit" class="btn btn-primary" value="Изменить"/>
             </div>
