--- a/templates/password_reset_form.html
+++ b/templates/password_reset_form.html
@@ -9,6 +9,8 @@
         <div class="col-md-4">
         {{ form.as_p }}
         </div>
+    </div>
+    <div class="row justify-content-md-center">
         <div class="col-md-4">
             <input type="submit" class="btn btn-primary" value="Восстановить!">
         </div>
